--- a/config.yaml
+++ b/config.yaml
@@ -217,7 +217,7 @@ markup:
         tabWidth: 4
 
 sitemap:
-    changeFreq: weekly
+    changeFreq: monthly
     disable: false
     filename: sitemap.xml
     priority: -1
