--- a/config.yaml
+++ b/config.yaml
@@ -143,6 +143,9 @@ params:
     widgets:
         homepage:
             - type: search
+            - type: archives
+              params:
+                  limit: 5
             - type: categories
               params:
                   limit: 10
