--- a/config.yaml
+++ b/config.yaml
@@ -213,7 +213,7 @@ menu:
               icon: linkedin
         - identifier: mail
           name: Mail
-          url: mailto:userwei.blog@gmail.com
+          url: mailto:userwei.contact@gmail.com
           params:
               icon: mail
 
