--- a/config.yaml
+++ b/config.yaml
@@ -32,7 +32,7 @@ params:
         - post
     featuredImageField: image
     rssFullContent: true
-    favicon: favicon.ico
+    favicon: favicon.svg
 
     footer:
         since: 2024
