fix config and post

--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ languages:
         weight: 1
     en:
         languageName: English
-        title: userwei's blog
+        title: userwei's Blog
         weight: 2
 
 services:
